name:                             playing-with-haskell
version:                          0.1.0.0
build-type:                       Simple
cabal-version:                    >= 1.10

executable to-do-exe
  default-language:               Haskell2010
  hs-source-dirs:                 app
  main-is:                        Main.hs
  ghc-options:                    -Werror -fwarn-incomplete-patterns
  build-depends:                  MissingH
                                , aeson
                                , base >= 4.7 && < 5
                                , bytestring
                                , directory
                                , listsafe
                                , optparse-applicative
                                , strict
                                , text
                                , time
                                , yaml
